--- a/Código/Angular/crud-dio-angular/src/app/components/header/header.component.html
+++ b/Código/Angular/crud-dio-angular/src/app/components/header/header.component.html
@@ -10,6 +10,12 @@
                 <li class="nav-item">
                     <a routerLink="/" class="nav-link">Usuarios</a>
                 </li>
+                <li class="nav-item">
+                    <a routerLink="/todo" class="nav-link">Lista de Tarefas</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/data-binding" class="nav-link">Data Binding</a>
+                </li>
             </ul>
         </div>
     </div>
